--- a/requirements.txt
+++ b/requirements.txt
@@ -7,19 +7,19 @@ wheel>=0.29
 # data science
 numpy
 pandas
-scikit-learn
+# scikit-learn
 
 # tests/linter
 black
 coverage
-flake8
+# flake8
 pytest
 yapf
 
 # API
 gcsfs
-google-cloud-storage
-mlflow
+# google-cloud-storage
+# mlflow
 s3fs
 
 # utilities
